--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,21 @@ body {
   border-width: 4px 0 0;
   background: none;
 }
+
+/*-------------------------------------------- new-result---------------------------------------------------------------*/
+.new-result{
+  display: flex;
+  width: 100%;
+  height: 300px;
+  flex-direction: column;
+  justify-content: center;
+  padding-inline: 1.3rem;
+}
+.marquee-line{
+  height: 200px;
+
+}
+
 /*-------------------------------------------- hero section---------------------------------------------------------------*/
 .hero {
   display: flex;
